8178604: JVM does not allow defining boot loader modules in exploded build after module system initialization

Allow defining of boot loader modules after initialization but add locks to synchronize access to exploded build list

Reviewed-by: dholmes, lfoltan